# go_mono_example

./: BUILD.bazel  LICENSE  MODULE.bazel  README.md  WORKSPACE.bazel  deps.bzl  go.work
src/a/: BUILD.bazel  go.mod  main.go
src/b/: BUILD.bazel  go.mod  main.go
