load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "a_lib",
    srcs = ["main.go"],
    importpath = "github.com/kruemelmann/go_mono_example/src/a",
    visibility = ["//visibility:private"],
    deps = ["@com_github_google_uuid//:go_default_library"],
)

go_binary(
    name = "a",
    embed = [":a_lib"],
    visibility = ["//visibility:public"],
)
