load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "b_lib",
    srcs = ["main.go"],
    importpath = "github.com/kruemelmann/go_mono_example/src/b",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "b",
    embed = [":b_lib"],
    visibility = ["//visibility:public"],
)
